--- a/index.html
+++ b/index.html
@@ -3,12 +3,108 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>College Admission Website</title>
+    <title>Welcome to Georgia State University</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            color: #333;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+        }
+#logo {
+            max-width: 100%;
+            height: auto;
+            width: 100px; 
+            margin-bottom: 10px;
+        }
+      #bottomRightFrame {
+            display: none;
+            position: fixed;
+            bottom: 0;
+            right: 0;
+            width: 350px;
+            height: 430px;
+            border: none;
+        }
+
+        button {
+            background-color: #003366;
+            color: #fff;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+     #openButton {
+            position: fixed;
+            bottom: 10px;
+            right: 10px;
+            background-color: #003366;
+            color: #fff;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            border: none;
+            border-radius: 5px;
+        }
+header {
+            background-color: #003366;
+            color: #fff;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        h1 {
+            font-size: 2em;
+            margin-bottom: 10px;
+        }
+
+        p {
+            font-size: 1.2em;
+            line-height: 1.6;
+           }
+
+        iframe {
+            display: none;
+            width: 350px;
+            height: 430px;
+            border: none;
+        }
+    </style>
 </head>
 <body>
-    <h1>Admission Requirements</h1>
-    <p id="admissionRequirements">Loading admission requirements...</p>
+<header>
 
-    <!-- Add other content as needed -->
+<img id="logo" src="https://commkit.gsu.edu/files/2019/06/PrimaryLogo2color.jpg" alt="Georgia State University Logo">
+        <h1>Welcome to Georgia State University</h1>
+    </header>
+
+    <main>
+        <p><i>
+            Discover a world of educational possibilities at Georgia State University, where we cultivate an engaging learning environment, ignite innovation, and empower students for success in a global society
+        </i></p>
+        <p><b>Any questions? Ask our chatbot.....!</b></p>
+    </main>
+
+    <button id="openButton" onclick="openIframe()">Open Chatbot</button>
+    
+ <iframe id = "bottomRightFrame"
+    allow="microphone;"
+    width="350"
+    height="430"
+    src="https://console.dialogflow.com/api-client/demo/embedded/56b5edd5-12de-4fbe-b9f6-e38146ad7437">
+</iframe>
+
+
+    <script>
+        function openIframe() {
+            var iframe = document.getElementById('bottomRightFrame');
+            iframe.style.display = 'block';
+        }
+    </script>
+
 </body>
 </html>
