--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ header {
         <p><i>
             Discover a world of educational possibilities at Georgia State University, where we cultivate an engaging learning environment, ignite innovation, and empower students for success in a global society
         </i></p>
-        <p><b>Any questions? Ask our chatbot.....!</b></p>
+        <p><b>Any questions? Ask our chatbot Ziya.....!</b></p>
     </main>
 
     <button id="openButton" onclick="openIframe()">Open Chatbot</button>
